--- a/assessment.html
+++ b/assessment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>yuriko11が作ったあなたのいいところ診断</title>
-    <link rel="stylesheet" href="assessment..css" >
+    <link rel="stylesheet" href="assessment.css" >
 </head>
 <body>
    <h1>あなたのいいところは？</h1>
