画像の追加

--- a/assessment.html
+++ b/assessment.html
@@ -18,5 +18,8 @@
 
 </div>
  <script src="assessment.js"></script>
+<p style="text-align:center;"><img src="https://4.bp.blogspot.com/-yYiwtA_rgBw/V7kx152G_YI/AAAAAAAA9I8/83DBJsLwz-wPCxd9GRp3WJRUi3ooc_5fACLcB/s400/document_shindansyo.png" 
+    alt="診断書の画像">
+</p>
 </body>
 </html>
